--- a/Views/Home/Menu.nl.cshtml
+++ b/Views/Home/Menu.nl.cshtml
@@ -17,7 +17,7 @@
 <div class="menu-page page-elegant">
     <div class="menu-container">
         <div class="menu-header">
-            <h1 class="menu-title">Restaurant Reserva</h1>
+            <h1 class="menu-title">Restaurant L'Etoile Blanche</h1>
             <div class="menu-divider"></div>
             <p class="menu-subtitle">Authentieke Belgische Keuken</p>
         </div>
