--- a/Views/Home/Index.nl.cshtml
+++ b/Views/Home/Index.nl.cshtml
@@ -35,7 +35,7 @@
                 <div class="hero-content">
                     <h1 class="restaurant-title">
                         <span class="restaurant-name">Restaurant</span>
-                        <span class="restaurant-brand">Reserva</span>
+                        <span class="restaurant-brand">L'Etoile Blanche</span>
                     </h1>
                     <div class="title-divider"></div>
                     <p class="restaurant-tagline">Een unieke gastronomische ervaring</p>
@@ -211,7 +211,7 @@
     </section>
 
     <footer class="home-footer">
-        <p>&copy; 2025 Reserva. Alle rechten voorbehouden.</p>
+        <p>&copy; 2025 L'Etoile Blanche. Alle rechten voorbehouden.</p>
     </footer>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
